--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
             API_TOKEN_SALT: ${{ secrets.API_TOKEN_SALT }}
             ADMIN_JWT_SECRET: ${{ secrets.ADMIN_JWT_SECRET }}
             TRANSFER_TOKEN_SALT: ${{ secrets.TRANSFER_TOKEN_SALT }}
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
           EOF
 
       - name: Setup GCloud Auth
